<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_light"
    tools:context="br.com.appabquiz.QuizActivity">

    <TextView
        android:id="@+id/pergunta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/quem_descobriu_o_brasil"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rgRespostas"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btnResponder"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pergunta">

        <RadioButton
            android:id="@+id/rbResposta1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pedro_lvares_cabral"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <RadioButton
            android:id="@+id/rbResposta2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crist_v_o_colombo"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <RadioButton
            android:id="@+id/rbResposta3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/donald_trump"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <RadioButton
            android:id="@+id/rbResposta4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pabllo_vittar"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    </RadioGroup>

    <Button
        android:id="@+id/btnResponder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="btnResponderOnClick"
        android:text="@string/responder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
